crates/aura-core/tests/ui/authorized_lifecycle_private_fields.stderr
error[E0451]: fields `capability` and `lifecycle` of struct `AuthorizedLifecyclePublication` are private
  --> tests/ui/authorized_lifecycle_private_fields.rs:10:9
   |
 9 |     let _publication = AuthorizedLifecyclePublication {
   |                        ------------------------------ in this type
10 |         capability,
   |         ^^^^^^^^^^ private field
11 |         lifecycle,
   |         ^^^^^^^^^ private field
